--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,86 @@
-html body {
-    box-sizing: border-box;
-    background-color: gray;
-    width: 100vw;
-    height: 100vh;
+.wrapper {
+  min-height: 1000px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Do Hyeon', sans-serif;
 }
-.hotel-wrap {
-    background-color:#fff;
-    width: 40%;
-    height: 40%;
-    margin: 10% auto;
+/* SHOP STYLE  */
+.container {
+  height: 100%;
 }
-/* Add a black background color to the top navigation */
-.topnav {
-    background-color: #fff;
-    overflow: hidden;
-  }
+.row:first-child { 
+  height: 70%;
+  width: 100%;
+  padding: 10%;
+  background-color: #8000ff;
+  background: linear-gradient(130deg, #000 0%, #8000ff 0%, #f2e6ff 60%);
+  align-content: center;
+  color: #fff;
+}
+.row:nth-child(2) {
+  height: 60%;
+  width: 100%;
+  padding: 7%;
+  align-content: center;
+  border: 1px solid #e6e6e6;
+}
+.row:nth-child(3) {
+  margin: auto;
+  width: 100%;
+  width: 50%;
+  margin-top: 50px;
+  padding: 3%;
+}
+.row:nth-child(4) {
+  /* background-color: darkorange; */
+  height: 60%;
+  width: 100%;
+  padding-bottom:5%;
+}
   
-  /* Style the links inside the navigation bar */
-  .topnav a {
-    float: left;
-    display: block;
-    color: #333;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-  }
-  
-  /* Change the color of links on hover */
-  .topnav a:hover {
-    background-color: #ddd;
-    color: black;
-  }
-  
-  /* Add an active class to highlight the current page */
-  .topnav a.active {
-    background-color: #ff9900
-    ;
-    color: white;
-  }
-  
-  /* Hide the link that should open and close the topnav on small screens */
-  .topnav .icon {
-    display: none;
-  }
-  /* Media Queries */
-  /* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-  }
-  
-  /* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }
+.third-img {
+  /* background: linear-gradient(85deg, #6600cc 0%, #cc99ff 5%, #f1f1f1 90%); */
+  border-radius: 10px;
+  margin-right: 100px;
+  background: linear-gradient(85deg, #6600cc 0%, #cc99ff 5%, #fff 40%);
+  /* background-color: darkorange; */
+}
+.first-content {
+  height: 50%;
+  align-content: center;
+}
+h1 {
+  font-family: 'Do Hyeon', sans-serif;
+  color: #26004d;
+  font-weight: bolder;
+  font-size: 3.0rem !important;
+}
+h3 {
+  font-family: 'Do Hyeon', sans-serif;
+  color: #26004d;
+  font-weight: bolder;
+  font-size: 2.0rem !important;
+}
+p {
+  font-family: "Roboto";
+  font-size: 1.3em;
+}
+.glocery-header {
+  color: #fff;
+  font-family: 'Do Hyeon', sans-serif;
+  font-weight: 500;
+  font-size: 3rem !important;
+
+}
+.info-header {
+background-color: #e6e6ff;
+border-radius: 20px;
+text-align: center;
+margin-bottom: 30px;
+}
+.wrapper{
+  margin-right: 500px;
+  background-color: darkturquoise;
+ 
+}
