--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,62 @@
-.wrapper {
+.wrap {
   min-height: 1000px;
   box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: 'Do Hyeon', sans-serif;
 }
+/* .wrapper {
+width: 70%;
+height: 100%;
+margin: 0px;
+margin: auto ;
+margin-top: 0px !important;
+} */
+.header {
+  font-weight: bolder;
+  font-size: 60px;
+  color: #333;
+  width: 30%;
+  height: 10%;
+  margin: 100px 17px;
+  /* background-color: darkgoldenrod; */
+  /* margin: 250px; */
+}
+/* .container {    
+  margin: 70px 50px;
+} */
+
+/* SPECIFIC STYLE ROW FOR HOME.HTML COMMENTED  */
+/* .row {
+margin: 40px 0px;;
+} */
+/* .item {
+  height: 200px;
+  width: 500px;
+  background-color: brown;
+  margin: 10px;
+} */
+
+/* SPECIFIC STYLE ROW i COMMENTED  */
+
+/* i {
+  color: #2eb8b8;
+  font-size: 2.5em;
+  font-weight: inherit;
+} */
+/* SPECIFIC STYLE ROW p COMMENTED  */
+
+/* p {
+  color: #b3b3b3;
+} */
+/* SPECIFIC STYLE h3 FOR HOME.HTML COMMENTED  */
+
+/* h3 {
+  font-family: 'Roboto', serif;
+  font-weight: bold;
+} */
+
+
 /* SHOP STYLE  */
 .container {
   height: 100%;
@@ -38,7 +90,13 @@
   width: 100%;
   padding-bottom:5%;
 }
-  
+
+/* .row:last-child {
+  background-color: darkred;
+  margin-top: 50px;
+  width: 100%;
+  height: 50%;
+} */
 .third-img {
   /* background: linear-gradient(85deg, #6600cc 0%, #cc99ff 5%, #f1f1f1 90%); */
   border-radius: 10px;
@@ -82,5 +140,7 @@ margin-bottom: 30px;
 .wrapper{
   margin-right: 500px;
   background-color: darkturquoise;
- 
+  /* position: relative;    */
+  /* background-color: darkseagreen; */
+  /* width: 90%; */
 }
