--- a/css/footerStyle.css
+++ b/css/footerStyle.css
@@ -14,6 +14,9 @@ body {
 a[href] {
     border-radius: 30px;
 }
+.card > .item {
+    display: flex;
+}
 .header {
     font-weight: bold;
     font-size: 2em;
