--- a/css/footerStyle.css
+++ b/css/footerStyle.css
@@ -6,13 +6,18 @@ body {
     /* background-color: aqua; */
 }
 .photo {
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     margin-right: 3%;
 }
 a[href] {
     border-radius: 30px;
+}
+.profile .card-title {
+    font-family: 'Do Hyeon', sans-serif;
+    font-size: 1em;
+
 }
 .card > .item {
     display: flex;
@@ -30,3 +35,6 @@ p {
     color: 808080;
     /* background-color: blueviolet; */
 }
+/* span {
+    display: inline !important;
+} */
