--- a/css/footerStyle.css
+++ b/css/footerStyle.css
@@ -38,12 +38,20 @@ p {
     font-size: 0.8em;
     font-weight: inherit;
 }
-.fab {
+.fa-adobe {
     font-size: 1.4em;
+    background-color: orange;
 }
 .fa-facebook {
     background-color: #fff;
     border-radius: 50%;
+}
+.card-body>.btn-outline-dark{
+    /* background-color: orchid; */
+    font-weight: 600;
+    font-size: 0.7em;
+    margin-bottom: 1.7%;
+    /* border: groove 2px #a6a6a6; */
 }
 .profile h5 {
     display: inline
